--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lib"
   ],
   "scripts": {
-    "build:cjs": "rimraf lib && babel src --extensions '.ts' --extensions '.tsx' --ignore '**/__tests__' --ignore '**/__testutils__' -d lib",
+    "build:cjs": "babel src --extensions '.ts' --extensions '.tsx' --ignore '**/__tests__' --ignore '**/__testutils__' -d lib",
     "build:es": "rimraf es && cross-env ES_MODULES=true babel src --extensions '.ts' --extensions '.tsx' --ignore '**/__tests__' --ignore '**/__testutils__' -d es",
     "build:typings": "tsc -p tsconfig.typings.json",
     "build": "npm run build:cjs && npm run build:es && npm run build:typings",
@@ -72,7 +72,7 @@
     "react": "^16.7.0-alpha.2"
   },
   "dependencies": {
-    "lodash": "^4.17.11"
+    "lodash.isplainobject": "^4.0.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
@@ -82,7 +82,7 @@
     "@babel/preset-typescript": "^7.1.0",
     "@types/graphql": "^14.0.3",
     "@types/jest": "^23.3.10",
-    "@types/lodash": "^4.14.119",
+    "@types/lodash.isplainobject": "^4.0.4",
     "@types/react": "^16.7.17",
     "apollo-cache-inmemory": "^1.3.11",
     "apollo-client": "^2.4.7",
