--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   "peerDependencies": {
     "apollo-client": "*",
     "graphql": "*",
-    "react": "^16.8.0-alpha.1"
+    "react": "^16.8.0"
   },
   "dependencies": {
     "lodash.isplainobject": "^4.0.6"
